crates/tui/src/snapshots/agent_finance_tui__render__tests__command_palette_140x40.snap
---
source: crates/tui/src/render/tests.rs
assertion_line: 919
expression: "render_to_text_grid(&state, 140, 40)"
---
┌Watchlist [fresh]─────────────────────────────┐┌Quote / Sessions [partial]────────────────────────────────────────────────────────────────┐
│> CRDO -                                      ││actions  [refresh]                                                                        │
│  BTCUSDT -                                   ││CRDO market snapshot                                                                      │
│                                              ││No quote loaded yet. Waiting for the next refresh.                                        │
│a add  d delete  left/right move  u undo      ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              │└──────────────────────────────────────────────────────────────────────────────────────────┘
│                                              │┌History Chart [partial]───────────────────────────────────────────────────────────────────┐
│                                              ││actions  [refresh]                                                                        │
│                                              ││CRDO history                                                                              │
│                    ┌Command Palette  type filter  enter run  up/down move  esc close────────────────────────────────┐                    │
│                    │help                                                                                            │▓                   │
│                    └────────────────────────────────────────────────────────────────────────────────────────────────┘▓                   │
│                    ┌matches  more below─────────────────────────────────────────────────────────────────────────────┐▓                   │
│                    │> Open help - Show cockpit shortcuts and interaction model                                      │▓                   │
│                    │  Toggle provider health - Show or hide provider capability coverage                            │▓                   │
│                    │  Toggle watchlist - Show or hide the symbol list panel                                         │▓                   │
│                    │  Focus provider health - Move keyboard focus to provider health                                │▓                   │
└────────────────────│  Toggle history - Show or hide the historical price chart                                      │▓                   │
┌Provider Health [par│  Set trading profile - Edit the default trading profile used by order, cancel, transfer, and fu│▓                   │
│provi stat detail   │  Toggle profile risk - Show or hide profile validation and risk policy                         │▓                   │
│auto  capa Default r│  Revalidate trading profile - Reload and validate the selected trading profile from disk       │▓                   │
│yahoo capa Broadest │  Stage profile live toggle - Review a risk.allow_live change for the selected trading profile  │▓                   │
│sec-e capa Official │  Chart glyph HYBRID - Switch the history chart terminal glyph rendering mode                   │▓                   │
│stooq capa Delayed q└────────────────────────────────────────────────────────────────────────────────────────────────┘▓                   │
│cnbc- capa pre/post e▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   │
│cnbc  capa CNBC quote payload -               ││                                                                                          │
│robin capa extended-hours quo -               ││                                                                                          │
└──────────────────────────────────────────────┘│                                                                                          │
┌Task Log [empty]──────────────────────────────┐│                                                                                          │
│status     event                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
│                                              ││                                                                                          │
└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings  CRDO | mode: command | live:off | dry-run | focus: Watchlist | ready | e:0
