crates/tui/src/snapshots/agent_finance_tui__render__tests__history_workbench_120x32.snap
---
source: crates/tui/src/render/tests.rs
assertion_line: 1264
expression: "render_to_text_grid(state, width, height)"
---
┌History Chart [fresh]─────────────────────────────────────────────────────────────────────────────────────────────────┐
│actions  [refresh]                                                                                                    │
│CRDO history                                                                                                          │
│provider: test  preset=auto  interval=5m  bars=48                                                                     │
│latest: 109.16 at 13:25  return=10.04%                                                                                │
│volume: 15.81K  freshness: 2026-06-25 09:30:00                                                                        │
│range: 9:30 -> 13:30  O=98.8000 H=113.18 L=94.7200 C=109.16                                                           │
│view=full  cursor=off  h/l cursor  wheel/[ ]/drag zoom  0-6 preset  r refresh  z exit                                 │
│                                                                                                                      │
│O 98.8000  H 113.18  L 94.7200  C 109.16·················································⡀······················114.10│
│change +10.49%  volume 661.51K  overlays MA20 MA50 VWAP··································⡇························⡀···│
│                        ⡇                                                                ⡇         ⡄         ⡆    ⡇  ⡆│
│cur 109.50··············⡇···························································⡄····⡇··⡀·⡆··⡄·⡇··⡇·⡆··⡇·⡇··⡀·last│
│                        ⡇                                       ⡀    ⡆  ⡀    ⡄ ⡇  ⡄ ⡇  ⡄ ⡇  ⡇ ⡇▁ ⡇ ⡇█ ⡇▁⡇▄ ⡇▄⡇▀ ⡇ ⡇▔ ▀│
│                        ⡇                        ⡀    ⡇  ⡄ ⡀  ⡀ ⡇  ⡆ ⡇▁ ⡇    ⡇ ⡇▄ ⡇▁⡇█ ⡇ ⡇▄ ⡇━⡇▔ ⡇█⡇█ ⡇▀⡇█ ⡇ ⠃∙ ⡇▀⠃∙ ⡇│
│                        ⡇         ⡄    ⡇  ⡄ ⡄  ⡆ ⡇  ⡇ ⡇▁ ⡇ ⡇  ⡇ ⡇▄ ⡇▁⡇▀ ⡇▄⡇  ⡇▀⡇▔ ⡇█⡇  ⡇▄⡇█ ⡇∙⠃∙ ⡇▔⡇▔ ⠇∙⡇▔ ⠁∙   ⠇     │
│buy order 104.00···⡆··⡀·⡇··⡆·⡆··⡇·⡇··⡀·⡇▄·⡇·⡇··⡇▁⡇▄·⡇▄⡇▀·⡇▄⡇█·⡇▄⡇··⡇▀⠇··⡇▔⡇▄·⠇∙⠁∙·⡇∙⠁∙·⡇∙⡇∙····×·⠃×⠁×··×⠃×··×·×··×·×·×│
│  ⡀ ⡆  ⡄ ⡇  ⡀ ⡆  ⡇ ⡇  ⡇ ⡇▄ ⡇▁⡇▁ ⡇▄⡇━ ⡇ ⡇▀ ⡇█⡇█ ⡇▔⡇█ ⡇▀⠇× ⡇▔⡇▀ ⡇▔⠁× ⡇× × ⠃×⡇×  × × ⠁× × ⠁×⡇×  ×                        │
│  ⡇ ⡇▁ ⡇ ⡇▄ ⡇ ⡇▄ ⡇▄⡇▀ ⡇▄⡇█ ⡇▀⡇█ ⡇×⡇× ⡇━⠃× ⡇×⡇▀ ⠃×⡇× ⠇× ∙ ⠃ ⡇  ⠃    ⠁      ⠁              ⡇                            │
│day open 101.00█·⡇×⠃×·⡇▔⡇▀·⡇·⡇▀·⠁····⡇····⠁·⠇··············⡇·····························⡇····························│
│long pos 99.0000·⠁····⠃·⠇··⠁·⠃·····························⡇·····························⠃························open│
│⡇      ⠃    ⠁ ⠃                                            ⡇                                                          │
│⠁                                                          ⡇                                                          │
│day low 96.0000············································⡇··························································│
│···························································⠁·····················································93.80│
│                                        █  █ █  █ █  █ █  █ █  █ █  █ █  █                                       █ █ █│
│        █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █      █  █ █  █ █  █ █  █ █  █ █  █ █  █ █ █│
│ █ █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █ █│
│ █ █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █  █ █ █│
│9:30                                                                                                             13:30│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings  CRDO | mode: normal | live:off | dry-run | ready
