crates/tui/src/snapshots/agent_finance_tui__render__tests__history_workbench_cursor_zoom_120x32.snap
---
source: crates/tui/src/render/tests.rs
expression: "render_to_text_grid(state, width, height)"
---
┌History Chart [fresh]─────────────────────────────────────────────────────────────────────────────────────────────────┐
│actions  [refresh]                                                                                                    │
│CRDO history                                                                                                          │
│source: test regular 5d/5m  preset=auto  bars=48                                                                      │
│latest: 109.16 at 13:25  return=10.04%                                                                                │
│volume: 15.81K  freshness: 2026-06-25T09:30:00+08:00                                                                  │
│range=auto  [auto] [1d] [5d] [1mo] [3mo] [6mo] [1y] tools [reset] [overlays]                                          │
│interval=auto  [auto] [1m] [5m] [15m] [1h] [1d]                                                                       │
│glyph=hybrid  [hybrid] [precision] [readable]                                                                         │
│range: 9:30 -> 13:30  O=98.8000 H=113.18 L=94.7200 C=109.16                                                           │
│view=25-100%  cursor=95%  h/l cursor  j/k line  enter copy line  wheel/[ ]/drag zoom  0-6 preset  r refresh  z exit   │
│                                                                                                                      │
│O 100.96  H 113.18  L 94.7200  C 109.16·········································⡀··························┃····114.10│
│change +8.12%  volume 528.50K  overlays MA20 MA50 VWAP··························⡇··························┃·····⡄····│
│                                                                                ⡇     ⡀      ⡆  ⡀   ⡀  ⡄  ⡇┃     ⡇▁  ⡇│
│cur 109.50···········································⡀············⡄···⡀··⡇······⡇··⡆··⡇···⡇··⡇▄·⡇···⡇··⡇▁·⡇┃··⡆··⡇last│
│                                 ⡄  ⡀         ⡆   ⡄  ⡇  ⡇      ⡇  ⡇   ⡇  ⡇▄ ⡇   ⡇▁ ⡇▄ ⡇━  ⡇▄ ⡇█ ⡇█  ⡇█ ⡇▔ ⡇┃  ⡇━ ⠇∙  ▔│
│      ⡀      ⡆  ⡄   ⡀  ⡄  ⡇   ⡆  ⡇▁ ⡇   ⡇  ⡇  ⡇▁  ⡇▁ ⡇█ ⡇▄  ⡆  ⡇━ ⡇▀  ⡇█ ⡇▔ ⡇▄  ⡇█ ⡇  ⠇∙  ⡇▀ ⡇▀ ⡇∙  ⡇▀ ⠃∙  ┃  ⠇∙  ×  ⠁│
│buy order 104.00⡇···⡇··⡇▁·⡇▄··⡇▄·⡇▀·⡇▄··⡇▄·⡇▄·⡇▔··⡇▀·⠇×·⡇▀··⡇▄·⡇×·⠁×··⡇×·⠁×·⡇×··⡇▔··×··×··⠃×·⠃×··×··⠃×··×··┃···×······│
│⡇▄ ⡇▄ ⡇▀  ⡇× ⡇▀ ⡇▀  ⡇█ ⡇▔ ⡇█  ⡇▀ ⠇× ⡇▔  ⡇▀ ⡇▔ ⠁×  ⡇×    ⠃   ⡇         ⠁     ⠁   ⡇                          ┃          │
│day open 101.00·⡇···⡇▀·⠁··⠇···⠃·····⠁···⡇··⠁····································⡇··························┃··········│
│⡇▔········⠇·········⠃···················⡇·······································⡇··························┃······open│
│long pos 99.0000························⡇·······································⠁··························┃··········│
│                                        ⡇                                                                  ┃          │
│day low 96.0000·························⡇··································································┃··········│
│········································⠁··································································┃·····93.80│
│▁▁ ▁▁ ▂▂  ▂▂ ▃▃ ▃▃  ▃▃ ▄▄ ▄▄  ▅▅ ▅▅ ▆▆  ▆▆ ▇▇ ▇▇  ██ ██ ██                                      ▁▁  ▁▁ ▂▂ ▂┃  ▃▃ ▃▃  ▃│
│██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ▄▄ ▄▄ ▅▅  ▅▅ ▆▆ ▆▆  ▆▆ ▇▇ ▇▇  ██ ██ ██  ██ ██ █┃  ██ ██  █│
│██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ ██  ██ ██ █┃  ██ ██  █│
│10:30                                                                                                      ┃     13:30│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings  CRDO | mode: normal | live:off | dry-run | ready
