crates/tui/src/snapshots/agent_finance_tui__render__tests__market_workspace_100x30.snap
---
source: crates/tui/src/render/tests.rs
assertion_line: 1345
expression: "render_to_text_grid(state, width, height)"
---
┌Watchlist [fresh]───────────────┐┌Quote / Sessions [partial]──────────────────────────────────────┐
│> CRDO -                        ││actions  [refresh]                                              │
│  BTCUSDT -                     ││CRDO market snapshot                                            │
│                                ││No quote loaded yet. Waiting for the next refresh.              │
│a add  d delete  left/right move││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                │└────────────────────────────────────────────────────────────────┘
│                                │┌History Chart [fresh]───────────────────────────────────────────┐
│                                ││actions  [refresh]                                              │
│                                ││CRDO history                                                    │
│                                ││source: test regular 5d/5m  preset=auto  bars=48                │
│                                ││latest: 109.16 at 13:25  return=10.04%                          │
│                                ││volume: 15.81K  freshness: 2026-06-25T09:30:00+08:00            │
└────────────────────────────────┘│range=auto  [auto] [1d] [5d] [1mo] [3mo] [6mo] [1y] tools       │
┌Provider Health [fresh]─────────┐│interval=auto  [auto] [1m] [5m] [15m] [1h] [1d]                 │
│  detail             freshness  ││glyph=hybrid  [hybrid] [precision] [readable]                   │
│  history=CRDO 48 ba 2026-06-25T││             ⡄                                   ⡆        114.10│
│                                ││·············⡇························⡀····⡀··⡄··⡇··⡆·⡇▁·⡆··⡇▁·▄│
│                                ││             ⡇     ⡀ ⡄  ⡀  ⡄  ⡆▁⡄  ⡇▁ ⡇▄ ⡇▄⡇━ ⡇█ ⡇▄ ⡇▔⡇▔ ⡇▀ ⡇▀ ⠇│
│                                ││⡀ ⡄  ⡆  ⡄ ⡆▁ ⡇▄ ⡇▁ ⡇▄⡇━ ⡇▄ ⡇━ ⡇▔⡇▄ ⡇× ⠇× ⡇▀⠇× ⠇× ⡇▔ ⠁×⠁× ⠁×  × ×│
└────────────────────────────────┘│⡇▄⡇━ ⡇█ ⡇█⡇▔ ⡇× ⡇▀ ⠇▔⠃× ⠇▔ ⠃  ⠁ ⡇                ⡇              │
┌Task Log [fresh]────────────────┐│⠇▔⠃  ⠃  ⠃    ⠁                  ⡇                               │
│status     event                ││                                ⠇                          93.80│
│succeeded  CRDO history loaded  ││   ▁  ▁  ▂ ▂  ▃  ▄  ▄ ▅  ▅  ▆  ▇ ▇  █  █    ▁  ▁  ▂  ▃ ▃  ▄  ▅ ▅│
│                                ││ █ █  █  █ █  █  █  █ █  █  █  █ █  █  █  █ █  █  █  █ █  █  █ █│
│                                ││9:30                                                       13:30│
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings  CRDO | mode: normal | live:off | dry-run | ready
