crates/tui/src/snapshots/agent_finance_tui__render__tests__narrow_workspace_48x20.snap
---
source: crates/tui/src/render.rs
assertion_line: 426
expression: "render_to_text_grid(&state, 48, 20)"
---
┌Watchlist [fresh]─────────────────────────────┐
│> CRDO -                                      │
└──────────────────────────────────────────────┘
┌Quote / Sessions [partial]────────────────────┐
│CRDO market snapshot                          │
└──────────────────────────────────────────────┘
┌Crypto Evidence [empty]───────────────────────┐
│CRDO evidence                                 │
│No crypto evidence loaded yet. Waiting for the│
└──────────────────────────────────────────────┘
┌Polymarket [partial]──────────────────────────┐
│CRDO prediction signals                       │
└──────────────────────────────────────────────┘
┌News / Research [partial]─────────────────────┐
│CRDO research                                 │
└──────────────────────────────────────────────┘
┌Task Log [empty]──────────────────────────────┐
│status     event                              │
└──────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings
